client/css/app.css
/* ... */
          header li.assign span.miniAvatar { float: right; }


/* -----------------------------------------
   Ticket Structure
----------------------------------------- */

.ticket {
  position: relative;
  margin-bottom: 50px;
}

  .ticket .avatar a {
    display: block;
    position: relative;
    width: 67px;
    padding: 5px;
    text-align: center;
    z-index: 200;
  }

    .ticket .avatar a img {
      display: block;
      width: 65px;
      height: 65px;
      margin: 0 auto 4px auto;
      border: 1px solid #cfd0d0;
      border: 1px solid rgba(207,208,208,0.7);
      z-index: 201;
    }

    .ticket .avatar a span {
      display: block;
      font-weight: 700;
    }

  .ticket .ticketInfo {
    z-index: 300;
    cursor: pointer;
  }

    .ticketInfo.hover { cursor: pointer; }

    .ticket .ticketHeader { padding: 10px 20px 8px 20px; }

      .ticketHeader .ticketName h2 {
        font-size: 18px;
        font-weight: 700;
        margin-bottom: 0;
        line-height: 1.5em;
      }

      .ticketHeader .ticketName span.timestamp {
        font-size: 14px;
        color: #626262;
      }
      
      .ticketHeader ul { margin-bottom: 0; }

        .ticketHeader ul li {
          float: left;
          margin: 0 10px 0 0;
        }

          .ticketHeader li:last-child { margin-right: 0; }

    .ticket .ticketBody {
      width: 78%;
      margin: 0 20px;
      padding-top: 12px;
      border-top: 1px solid #cfd0d0;
      border-top: 1px solid rgba(207,208,208,0.7);
    }

      .ticketBody ul.ticketAdmin {
        position: absolute;
        right: 20px;
      }

/* -----------------------------------------
   Ticket Items
----------------------------------------- */

span.miniAvatar {
  position: relative;
  display: block;
  padding: 2px;
  background: #fff;
  border: 1px solid #cfd0d0;
  border: 1px solid rgba(207,208,208,0.7);
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}

  span.miniAvatar figure.poof {
    display:block;
    position: absolute;
    bottom: -15px;
    right: -10px;
    width: 32px;
    height: 32px;
    background: url('/img/assets/poof.png') no-repeat 0 0;
  }

  span.miniAvatar img {
    display: block;
    width: 35px;
    height: 35px;
    border: 1px solid #cfd0d0;
    border: 1px solid rgba(207,208,208,0.7);
  }

span.tape {
  display: block;
  width: 51px;
  height: 47px;
  position: absolute;
  top: -17px;
  left: -22px;
  background: url('/img/assets/tape.png') top left no-repeat;
  z-index: 202;
}

span.tack {
  display: block;
  position: absolute;
  width: 29px;
  height: 26px;
  top: -15px;
  left: -8px;
  background: url('/img/assets/tack.png') no-repeat;
}

/* Ticket Meta */

.ticketInfo ul.ticketMeta {
  position: absolute;
  bottom: 12px;
  right: 20px;
  margin: 0;
  height: 24px;
}

  .ticketInfo ul.ticketMeta li {
    float: right;
    margin: 0 0 0 12px;
  }

    ul.ticketMeta li.chat {
      width: 24px;
      height: 22px;
      background: url('/img/assets/08-chat.png') no-repeat;
      color: #fff;
      font-size: 10px;
      line-height: 1.75em;
      text-align: center;
    }

    ul.ticketMeta li.gears {
      position: relative;
      width: 20px;
      height: 23px;
      background: url('/img/assets/gears.png') no-repeat;
      cursor: pointer;
    }

      ul.ticketMeta li.gears ul {
        position: absolute;
        top: 0;
        left: 0;
        border: 1px solid rgba(85,85,85,0.4);
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
        background: rgb(250,250,250);
        background: -moz-radial-gradient(center, ellipse cover,  rgba(250,250,250,1) 30%, rgba(220,220,220,1) 100%);
        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(30%,rgba(250,250,250,1)), color-stop(100%,rgba(220,220,220,1)));
        background: -webkit-radial-gradient(center, ellipse cover,  rgba(250,250,250,1) 30%,rgba(220,220,220,1) 100%);
        background: -o-radial-gradient(center, ellipse cover,  rgba(250,250,250,1) 30%,rgba(220,220,220,1) 100%);
        background: -ms-radial-gradient(center, ellipse cover,  rgba(250,250,250,1) 30%,rgba(220,220,220,1) 100%);
        background: radial-gradient(center, ellipse cover,  rgba(250,250,250,1) 30%,rgba(220,220,220,1) 100%);
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fafafa', endColorstr='#dcdcdc',GradientType=1 );
      }

        ul.ticketMeta li.gears ul li {
          width: 100px;
          margin: 0 4px;
          padding: 4px 8px;
          border-bottom: 1px solid rgba(120,120,120,0.4);
          border-top: 1px solid rgba(235,235,235,0.3);
        }

          ul.ticketMeta li.gears ul li:first-child { border-top: none; }
          ul.ticketMeta li.gears ul li:last-child { border-bottom: none; }

/* -----------------------------------------
   Ticket Admin
----------------------------------------- */

#ticketOptions { 
  z-index: 299; 
  margin-bottom: 0;
}

#ticketOptions li {
  float: left;
  margin: 0 2em 0 0;
  padding: 0.6em 1.8em;
  font-size: 16px;
  color: #222;
  cursor: pointer;
}

  #ticketOptions li:last-child { margin-right: 0; }


/* -----------------------------------------
   Comments
----------------------------------------- */

.comment { margin-bottom: 35px; }

  .comment .commentBody { position: relative; }

    .commentBody .commentAvatar {
      float: left;
      padding: 8px;
    }

    .commentBody .commentInfo {
      float: left;
      padding: 8px 0 8px 8px;
      width: 72%;
    }

      .commentInfo h5 {
        font-size: 14px;
        font-weight: 600;
      }

      .commentInfo p { line-height: 1.5em; }

      .commentInfo p:last-child { margin-bottom: 0; }
    
    .commentBody span.commentTime {
      display: block;
      position: absolute;
      bottom: 12px;
      right: 12px;
      color: #626262;
      font-size: 12px;
    }
/* ... */

